2007-04-02    <tino@firebird.03.softkill.net>

	* socklinger.c (process_args): delay added

2006-12-12    <tino@firebird.03.softkill.net>

	* BUGS: updated

	* diet: Softlink deleted, no "make static"

	* Makefile.tino: re-created with tino/setuptino.sh

	* example/portcullis.sh: completed (hopefully)

2006-09-16  U-KOSH\Administrator  <Administrator@KOSH>

	* socklinger.c (main): bugfix: if @ was missing (like in IPs), cnt
	was set.

2006-09-08  U-KOSH\Administrator  <Administrator@KOSH>

	* socklinger.c (socklinger_prefork, socklinger_postfork): added as
	CygWin fix.  Change usage such, that '-n@' gives alternate fork
	method and '>' creates the connect variant.
	
2006-06-17    <tino@firebird.03.softkill.net>

	* socklinger.c (socklinger): SOCKLINGER_SOCK added to environment
	(socklinger): Now correct exist status is printed

2006-02-09    <tino@firebird.03.softkill.net>

	* socklinger.c (socklinger): close socket on forked connection
	(main): additional socket close here, too.

2006-01-25    <tino@firebird.03.softkill.net>

	* socklinger.c (socklinger_accept): HUP control added

2006-01-24    <tino@firebird.03.softkill.net>

	* socklinger.c (socklinger_accept): If SYN/RST was found or
	something similar weird happened, then accept returns "broken
	pipe" and socklinger got an error.  Now the process relaxes a
	little bit and retries.
	(socklinger): whoopsie, errno was checked even if there was no
	error ..

2005-10-30    <tino@firebird.03.softkill.net>

	* socklinger.c (socklinger): improved output to screen

	* example/streamgrab.sh: added

	* example/tester.sh: improved to give more info

2005-03-15    <tino@firebird.03.softkill.net>

	* socklinger.c (socklinger): fo now specially treated if fo!=fi

2004-08-16  U-KOSH\Administrator  <Administrator@KOSH>

	* socklinger.c (socklinger_accept, main): prefix "count@" for
	number of parallel connections implemented.  It looks like it is
	preforking, but the script isn't preforking at all.  Socklinger